--- a/products.css
+++ b/products.css
@@ -304,22 +304,24 @@
             margin-top: 20px;
         }
 
-        .blue-btn {
-            border-radius: 15px;
+         .apply-button {
             background-color: transparent;
-            display: block;
-            width: 100%;
-            padding: 8px;
             border: 1px solid gray;
-            color: white;
-            text-align: center;
+            padding: 0.75rem 2rem;
+            border-radius: 4px;
             cursor: pointer;
+            font-size: 0.9rem;
             transition: all 300ms;
         }
-        .blue-btn:hover {
-            background: var(--blue-gradient-bg);
-            color: black;
-            border: 1px solid var(--card-bg);
+
+        .apply-button a {
+            text-decoration: none;
+        }
+
+        .apply-button:hover {
+            background-color: #8e0000;
+            color: white;
+            border: 1px solid #8e0000;
         }
 
 /* Footer */
