--- a/products.css
+++ b/products.css
@@ -281,7 +281,7 @@
         }
         .pricing-option h3 {
             font-size: 18px;
-            color: white;
+            color: black;
             margin-bottom: 0;
         }
 
