--- a/contact-us.css
+++ b/contact-us.css
@@ -47,8 +47,8 @@
     }
 
     a {
-        color: black; /* Default color */
-        text-decoration: none; /* Optional: removes underline */
+        color: black; 
+        text-decoration: none; 
       }
 
     .container {
@@ -57,11 +57,11 @@
         flex-direction: column;
         margin: 0 auto;
           }
-
-    /* Section related */
     section {
         padding-top: 80px;
     }
+
+/* Header */
 
     .logo-image {
         height: 70px;
@@ -100,7 +100,6 @@
       position: relative;
     }
     
-    /* Ensure both headers use the same centering technique */
     .initial-header nav {
         position: absolute;
         left: 50%;
@@ -119,6 +118,7 @@
       color: #f00;
     }
 
+/* Main */
 .apply-button {
     background-color: transparent;
     border: 1px solid gray;
@@ -139,12 +139,10 @@
     border: 1px solid #8e0000;
 }
 
-/* MAIN PAGE */
-
 .contact-us {
     padding: 20px 0;
 }
- /* General Layout */
+
  .contact-us p {
     font-size: 18px;
     color: #323232;
@@ -152,7 +150,7 @@
     margin-bottom: 30px;
 }
 
-/* Title secrion */
+/* Title section */
 .contact-title {
     background-color: black;
     text-align:center;
@@ -248,7 +246,6 @@
     display: block;
 }
 
-/* New Form Row for Name and Email */
 .form-row {
     display: flex;
     justify-content: space-between;
@@ -274,7 +271,6 @@
     outline: none;
 }
 
-/* Button Styling */
 .contact-form button {
     background-color: transparent;
     color: darkred;
