--- a/demo.css
+++ b/demo.css
@@ -47,8 +47,8 @@
     }
 
     a {
-        color: black; /* Default color */
-        text-decoration: none; /* Optional: removes underline */
+        color: black; 
+        text-decoration: none; 
       }
 
     .container {
@@ -58,7 +58,6 @@
         margin: 0 auto;
           }
 
-    /* Section related */
     section {
         padding-top: 100px;
     }
@@ -67,7 +66,7 @@
         resize: none;
     }
 
-     /* Header styles */
+     /* Header */
 .container_head {
     max-width: 1200px;
     margin: 0 auto;
@@ -129,7 +128,6 @@
   position: relative;
 }
 
-/* Ensure both headers use the same centering technique */
 .initial-header nav {
     position: absolute;
     left: 50%;
@@ -147,6 +145,8 @@
 .initial-header nav a:hover {
   color: #f00;
 }
+
+/* Main */ 
 
     .apply-button {
         background-color: transparent;
@@ -167,7 +167,6 @@
         color: white;
         border: 1px solid #8e0000;
     }
-/* Demo page */
         .demo-container {
             font-family: Arial, sans-serif;
             display: flex;
@@ -267,7 +266,6 @@
             }
         }
 
-        /* Demo page */
         .demo-container {
             font-family: Arial, sans-serif;
             display: flex;
