--- a/privacy-and-terms.css
+++ b/privacy-and-terms.css
@@ -47,8 +47,8 @@
     }
 
     a {
-        color: black; /* Default color */
-        text-decoration: none; /* Optional: removes underline */
+        color: black; 
+        text-decoration: none; 
       }
 
     .container {
@@ -58,12 +58,11 @@
         margin: 0 auto;
           }
 
-    /* Section related */
     section {
         padding-top: 100px;
     }
 
-    /* Header styles */
+    /* Header*/
 .container_head {
     max-width: 1200px;
     margin: 0 auto;
@@ -125,7 +124,6 @@
   position: relative;
 }
 
-/* Ensure both headers use the same centering technique */
 .initial-header nav {
     position: absolute;
     left: 50%;
